<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/Atoms"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:text="Atoms"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/Calculate"
            android:layout_width="291dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Calculate"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="291dp"
            android:layout_height="97dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/atoms"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Equations"
            android:layout_width="291dp"
            android:layout_height="26dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/equations"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="291dp"
            android:layout_height="97dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/atomic"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Equations_two"
            android:layout_width="291dp"
            android:layout_height="26dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/equations_two"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/atomic_mass"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="291dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/choose"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="291dp"
            android:layout_height="244dp"
            android:layout_gravity="center_horizontal"
            android:text="Calculate numbers of protons, neutrons, and electrons by using mathematical expressions (1-3):
            \np = 11  n = 23 - 11 = 12  e = 11 - 0 = 11
            \n4. Alternatively, you can also calculate the atomic number, atomic mass, and charge.
            \n5. Choose your element. Let’s assume that it is the sulfide anion.
            \n6. Find the numbers of protons, neutrons, and electrons. They are equal to 16, 16 and 18, respectively.
            \n7. Calculate atomic number, atomic mass, and charge by using mathematical expressions (4-6):
            \nZ = 16  A = 16 + 16 = 32  z = 16 - 18 = -2"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />


    </LinearLayout>
</ScrollView>