<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Exercises"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="Exercises"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Mass"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Percent solutions"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/one"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/exercises2a"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Answer1a"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/answer2a"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/two"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="mass percent = (mass of solute/mass of solution) × 100%
            \nmass of solute = mass percent × mass of solution/100%
            \n= 0.5% x 100 g/100%
            \n= 0.5 g
            \nSince the total mass of the solution equals 100 g, the remaining 99.5 g of the solution is water. To prepare the solution, dissolve 0.5 g phenolphthalein in 99.5 g distilled or deionized water."
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/three"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/exercises2a_con"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/four"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/exercise2b"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Answer2b"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/answer2b"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>