<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Concentration"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:text="Concentration"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Percentage_Concentration"
            android:layout_width="291dp"
            android:layout_height="93dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/percentage_concentration"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Equations"
            android:layout_width="291dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:text="After you determine how many bonding and antibonding electrons there are, use this bond order formula:"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Bond Order = (Number of bonding electrons - Number of antibonding electrons) / 2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Examples"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="where m₁ is mass of solute [g], m₂ - total mass of solution [g]."
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Other Useful Equations"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="291dp"
            android:layout_height="95dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/density"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="wt% = c * 100% * M/d"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView7"
            android:layout_width="291dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/alternatively"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/TextView8"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="c = wt% * d / 100% * M"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView9"
            android:layout_width="291dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/knowing"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="m₁ = wt% * m₂ / 100%"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="291dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="If you want to calculate of mass of solute per 100 g of water (H₂O), you can use equation:"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="m = m₁ * 100/(m₂ - m₁)"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/TextView13"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Where"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>
</ScrollView>